<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.characters.CharactersListFragment">

    <EditText
        android:id="@+id/search_name"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:hint="@string/search_name"
        app:layout_constraintEnd_toStartOf="@+id/search_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/search_status"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/search_status"
        app:layout_constraintEnd_toStartOf="@+id/search_button"
        app:layout_constraintStart_toEndOf="@+id/search_name"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/apply_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search_status"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/search_species"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/search_species"
        app:layout_constraintEnd_toEndOf="@+id/search_name"
        app:layout_constraintStart_toStartOf="@+id/search_name"
        app:layout_constraintTop_toBottomOf="@+id/search_name" />

    <EditText
        android:id="@+id/search_gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/search_gender"
        app:layout_constraintEnd_toEndOf="@+id/search_status"
        app:layout_constraintStart_toEndOf="@+id/search_name"
        app:layout_constraintTop_toBottomOf="@+id/search_status" />

    <Button
        android:id="@+id/undo_search_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/undo_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/search_status"
        app:layout_constraintTop_toBottomOf="@+id/search_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_card_character"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/undo_search_button"
        app:spanCount="2"
        tools:listitem="@layout/card_character"
        tools:orientation="vertical">

    </androidx.recyclerview.widget.RecyclerView>
</androidx.constraintlayout.widget.ConstraintLayout>